# fold

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  README.org  fold.cpp  fold.cu  vis.py  viz.py
src/: fold.cu  fold.cuh  lib.rs  main.cpp  protein.cpp  protein.hpp  pybind.cpp
